# ai-workflow

./: .checkov.yaml  .coderabbit.yaml  .dockerignore  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .pymarkdown.json  AGENTS.md  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  sonar-project.properties
.factory/: SCHEMA.md  settings.json
.github/: CODEOWNERS
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: example.py
app/contracts/: __init__.py  errors.py  example_contract.py
app/core/: __init__.py  dependencies.py  exceptions.py  factory.py  settings.py
app/infrastructure/: db_connections.py
app/routes/: __init__.py  health_router.py
app/services/: example_service.py
docs/: api-patterns.md  dependency-patterns.md  docstrings-guide.md  factory-patterns.md  router-patterns.md  service-patterns.md
docs/plans/: phase1.md  phase2.md  phase3.md  phase4.md
docs/plans/refactoring/: 01.md  01.r.md  02.md  02.r.md  03.md  03.r.md  04.md  04.r.md  05.md  05.r.md  06.md  06.r.md  07.md  07.r.md  08.md  08.r.md  09.md  09.r.md  10.md  10.r.md  11.md  11.r.md  review.txt
scripts/: __init__.py  coderabbit_review.py  gen_openapi.py  latest_review.py  lint.py  setup.py  sonar_review.py  sonar_scan.sh  start_server.py
scripts/knowledge/: README.md
tests/: conftest.py
tests/e2e/: test_health.py
tests/unit/: test_start_server_host.py  test_validation_errors.py
tools/: __init__.py  gen_openapi.py
